# routes/customers.js
@@ -1,11 +1,13 @@
+module.exports = (app, dependencies) => {
+
+const { response } = require('express');
 const express = require('express');
 const router = express.Router();
-const customersController = require('../controllers/customers');
+const customersController = require('../controllers/customers')(request, response, dependencies);
 
-router.get('/', customersController.getAll);
-router.get('/:id', customersController.getOne);
-router.post('/', customersController.addOne);
-router.put('/:id', customersController.updateOne);
-router.delete('/:id', customersController.deleteOne);
-
-module.exports = router;
+router.get('/', (request, response) => {customersController.getAll});
+router.get('/:id', dependencies.viewOneCustomerValidation, (request, response) => {customersController.getOne});
+router.post('/', dependencies.createCustomerValidation, (request, response) => {customersController.addOne});
+router.put('/:id', dependencies.createCustomerValidation, (request, response) => {customersController.updateOne});
+router.delete('/:id', deleteOneCustomerValidation, (request, response) => {customersController.deleteOne});
+};
